--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 setup: true
 orbs:
-  orb-tools: circleci/orb-tools@12.3
-  shellcheck: circleci/shellcheck@3.2
+  orb-tools: circleci/orb-tools@12.4
+  shellcheck: circleci/shellcheck@3.4
 
 filters: &filters
   tags:
@@ -16,7 +16,7 @@ workflows:
       - orb-tools/pack:
           filters: *filters
       - orb-tools/review:
-          orb_name: neon-orb-test
+          orb_name: neon
           filters: *filters
       - shellcheck/check:
           filters: *filters
@@ -24,6 +24,7 @@ workflows:
       - orb-tools/continue:
           pipeline_number: << pipeline.number >>
           vcs_type: << pipeline.project.type >>
-          orb_name: neon-orb-test
-          requires: [orb-tools/lint, orb-tools/pack, orb-tools/review, shellcheck/check]
+          orb_name: neon
+          requires:
+            [orb-tools/lint, orb-tools/pack, orb-tools/review, shellcheck/check]
           filters: *filters
