--- a/tests/example-orb-test.yml
+++ b/tests/example-orb-test.yml
@@ -100,7 +100,7 @@ workflows:
 
       - test-idempotent-create
 
-      - neon/run-tests:
+      - neon/run_tests:
           migrate_command: 'echo ''Running migrations against Neon branch...'' && echo "DATABASE_URL is set: $(echo $DATABASE_URL | head -c 30)..."'
           test_command: 'echo ''Running tests against Neon branch...'' && echo "PGHOST: $PGHOST" && echo ''All tests passed!'''
           ttl_seconds: 600
