--- a/tests/example-orb-test.yml
+++ b/tests/example-orb-test.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
 
-      - neon/create-branch:
+      - neon/create_branch:
           branch_name: "ci-test-create-delete-<< pipeline.number >>"
           ttl_seconds: 600
 
@@ -55,7 +55,7 @@ jobs:
               pg_isready -h "$PGHOST" -U "$PGUSER" -d "$PGDATABASE" && echo "Connection successful!" || echo "pg_isready check failed"
             fi
 
-      - neon/delete-branch
+      - neon/delete_branch
 
   test-idempotent-create:
     docker:
@@ -64,7 +64,7 @@ jobs:
     steps:
       - checkout
 
-      - neon/create-branch:
+      - neon/create_branch:
           branch_name: "ci-test-idempotent-<< pipeline.number >>"
           ttl_seconds: 600
 
@@ -74,7 +74,7 @@ jobs:
             echo "First creation - Branch ID: $NEON_BRANCH_ID"
             echo "$NEON_BRANCH_ID" > /tmp/first_branch_id
 
-      - neon/create-branch:
+      - neon/create_branch:
           branch_name: "ci-test-idempotent-<< pipeline.number >>"
           ttl_seconds: 600
 
@@ -91,7 +91,7 @@ jobs:
               exit 1
             fi
 
-      - neon/delete-branch
+      - neon/delete_branch
 
 workflows:
   test-everything:
