--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -16,7 +16,7 @@ body:
     attributes:
       label: "Orb version"
       description: |
-        Which version of `<namespace>/<orb-name>` are you using?
+        Which version of `dhanushreddy291/neon` are you using?
       placeholder: "1.0.0"
 
   - type: textarea
